desk/bare/web/fund/style/fund.css
/* scrollbar improvements (taken from tlon; https://github.com/tloncorp/tlon-apps) */
* {
  /* Scrollbar resizing for Firefox */
  scrollbar-width: thin;
  scrollbar-color: rgb(var(--colors-gray-200)) transparent;
  /* Hide gray box when tapping a link on iOS */
  -webkit-tap-highlight-color: transparent;
  /* Disable double-tap to zoom, removes click delay */
  touch-action: manipulation;
  /* Better font rendering */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: subpixel-antialiased;
}

/* Scrollbar resizing for Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 10px;
}

*::-webkit-scrollbar-track {
  background: transparent;
  border: solid 2px transparent;
}

*::-webkit-scrollbar-thumb {
  background: rgb(var(--colors-gray-200));
  border: solid 2px transparent;
  border-radius: 20px;
  background-clip: content-box;
}


/* Auto-grow Text Areas (css-tricks.com/the-cleanest-trick-for-autogrowing-textareas) */
.grow-wrap {
  /* easy way to plop the elements on top of each other and have them both sized based on the tallest one's height */
  display: grid;
}
.grow-wrap::after {
  /* Note the weird space! Needed to preventy jumpy behavior */
  content: attr(data-replicated-value) " ";

  /* This is how textarea text behaves */
  white-space: pre-wrap;

  /* Hidden from view, clicks, and screen readers */
  visibility: hidden;
}
.grow-wrap > textarea {
  /* You could leave this, but after a user resizes, then it ruins the auto sizing */
  resize: none;

  /* Firefox shows scrollbar on growth, you can hide like this. */
  overflow: hidden;
}
.grow-wrap > textarea,
.grow-wrap::after {
  /* NOTE: Identical styling required!! */
  padding: 0.25rem;
  font: inherit;

  /* Place on top of each other */
  grid-area: 1 / 1 / 2 / 2;
}


/* Auto-add indicators for required fields (https://stackoverflow.com/q/49685336) */
input[required] + label:after,
select[required] + label:after,
div.ts-wrapper + label:after {
  content: '*';
  color: #b80c09; /* text-highlight1-500 */
}

/* Drop-up for selectors near the bottom of the page (https://stackoverflow.com/a/78298291) */
.ts-dropdown.dropup {
    bottom: 100%;
    top: auto;
}

/* Remove 'w-full' from .ts-control inputs (prevents weird multi-line input breakups) */
.ts-control > input {
  width: unset;
}


/* Styling for tippy.js elements (https://atomiks.github.io/tippyjs/v6/themes/) */
/* https://unpkg.com/tippy.js@6.3.7/dist/tippy.css */
.tippy-box[data-animation=fade][data-state=hidden] {
  opacity:0;
}
[data-tippy-root]{
  max-width:calc(100vw - 10px);
}
.tippy-box{
  position:relative;
  background-color:#333;
  color:#fff;
  border-radius:4px;
  font-size:14px;
  line-height:1.4;
  white-space:normal;
  outline:0;
  transition-property:transform,visibility,opacity;
}
.tippy-box[data-placement^=top] > .tippy-arrow {
  bottom:0;
}
.tippy-box[data-placement^=top] > .tippy-arrow:before {
  bottom:-7px;
  left:0;
  border-width:8px 8px 0;
  border-top-color:initial;
  transform-origin:center top;
}
.tippy-box[data-placement^=bottom] > .tippy-arrow {
  top:0;
}
.tippy-box[data-placement^=bottom] > .tippy-arrow:before {
  top:-7px;
  left:0;
  border-width:0 8px 8px;
  border-bottom-color:initial;transform-origin:center bottom;
}
.tippy-box[data-placement^=left] > .tippy-arrow {
  right:0;
}
.tippy-box[data-placement^=left] > .tippy-arrow:before {
  border-width:8px 0 8px 8px;
  border-left-color:initial;
  right:-7px;
  transform-origin:center left;
}
.tippy-box[data-placement^=right] > .tippy-arrow{
  left:0;
}
.tippy-box[data-placement^=right] > .tippy-arrow:before {
  left:-7px;
  border-width:8px 8px 8px 0;
  border-right-color:initial;
  transform-origin:center right;
}
.tippy-box[data-inertia][data-state=visible] {
  transition-timing-function:cubic-bezier(.54,1.5,.38,1.11);
}
.tippy-arrow {
  width:16px;
  height:16px;
  color:#333;
}
.tippy-arrow:before {
  content:"";
  position:absolute;
  border-color:transparent;
  border-style:solid;
}
.tippy-content{
  position:relative;
  padding:5px 9px;
  z-index:1;
}

/* custom tippy styling */
.tippy-box[data-theme~='fund'] {
  background-color: #e8e8e8; /* bg-primary-500 */
  color: #04080f; /* text-secondary-500 */
  border-color: #04080f; /* border-secondary-500 */
  border-width: 1px; /* border */
  border-radius: 0.375rem; /* rounded-md */
  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); /* shadow-lg */
}
.tippy-box[data-theme~='fund'][data-placement^='top'] > .tippy-arrow::before {
  border-top-color: #04080f; /* border-secondary-500 */
}
.tippy-box[data-theme~='fund'][data-placement^='bottom'] > .tippy-arrow::before {
  border-bottom-color: #04080f; /* border-secondary-500 */
}
.tippy-box[data-theme~='fund'][data-placement^='left'] > .tippy-arrow::before {
  border-left-color: #04080f; /* border-secondary-500 */
}
.tippy-box[data-theme~='fund'][data-placement^='right'] > .tippy-arrow::before {
  border-right-color: #04080f; /* border-secondary-500 */
}

/* Styling for tom-select.js (https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.css) */
/**
 * tom-select.css (v2.3.1)
 * Copyright (c) contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
 * file except in compliance with the License. You may obtain a copy of the License at:
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
 * ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 *
 */
.ts-control {
  padding: 0.25rem 0.25rem;
  width: 100%;
  overflow: hidden;
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  box-shadow: none;
  border-radius: 0.375rem; /* rounded-md */
  display: flex;
  flex-wrap: wrap;
}
/* ... */

